Revert "fix: set bottom sheet z-index in preparation for top bar changes"
This reverts commit ed0fda3af11b2f7474b9d25414036d39e3ccdc8b.

--- a/app/component/map/map.scss
+++ b/app/component/map/map.scss
@@ -86,7 +86,7 @@ div.map {
       min-height: 50vh;
       background: white;
       position: relative;
-      z-index: $mobile-drawer-content-zindex;
+      z-index: index($zindex, mobile-drawer);
       .drag-line {
         width: 30px;
         height: 4px;
